<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>980</width>
    <height>980</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <property name="styleSheet">
   <string notr="true">QDialog{
background-color:#D0DAE5;
margin-top:10px;
}

QTextBrower{
background-color:#D0DAE5;
border-width:0;border-style:outset
}

QLineEdit{
background-color:#D0DAE5;
}

QWidget{
background-color:#D0DAE5;
}

QStackedWidget{
background-color:#D0DAE5;
}

QLabel{
font-size:14px;
font-family:Microsoft YaHei;
background-color:#D0DAE5;
}

QGroupBox{
font-size:14px;
font-family:Microsoft YaHei;
border:1px solid rgb(0, 0, 0);
}

/****QPushButton****/
QPushButton{
width:32px;
height:32px;
background-color:#F4F4F3;
color: #FFFFFF;
font-size:14px;
font-family:Microsoft YaHei;
}
QPushButton#pushButton_close:hover{
background-color:#2784D6;
cursor:pointer;
}
QPushButton#pushButton_close:pressed{
background-color:#2784D6;
}
QToolBar{
background-color:#172545;
height:30px;
border:None;
padding:1px;
}


/****QTreeWidget****/
QTreeWidget{
background-color:#D0DAE5;
padding-top:20px;
padding-left:10px;
margin-top:20px;
}
QTreeView::item{
font: 14px;
}
QTreeView::item:selected{
selection-color: #1F95FF;
}
QTreeView::item:hover{
background-color:#D0DAE5;
}

QTreeView::branch:has-children:!has-siblings:closed,
QTreeView::branch:closed:has-children:has-siblings {
border-image: none;
image: url(imgs/common/plus.png);
}

QTreeView::branch:open:has-children:!has-siblings,
QTreeView::branch:open:has-children:has-siblings  {
border-image: none;
image: url(imgs/common/Minus.png);
}

QTreeView::branch:!has-children:!has-siblings:adjoins-item {
    border-image: url(imgs/common/tree.png);
}
QTableWidget{
outline: none;
selection-color:#666666;
alternate-background-color:#F9FAFC;
}
QTableCornerButton::section{
background: #EDF2F8;
}
QTableWidget::item{
font-size:14px;
line-height:30px;
border:1px solid #D2D2D2;
}

QTableWidget::item:hover{
background-color:#EAF7FF;
}
QHeaderView::section:vertical {
color: #666666;
text-align:center;
font: 14px Arial;
border:1px solid #D2D2D2;
background: #F9FBFD;
width: 40px;
height:30px;
alternate-background-color:#F9FAFC;
}
QHeaderView::section:horizontal {
color: #666666;
font: 14px Microsoft YaHei;
padding: 0px 1px 0 1px;
text-align:center;
border:1px solid #D2D2D2;
background: #EDF2F8;
height: 30px;
alternate-background-color:#F9FAFC;
}
QScrollBar:vertical{
border: 5px solid #D5D5D5;
}
QPushButton:hover{
background-color:#2784D6;
cursor:pointer;}
QPushButton{
background-color:#F4F4F3;
}
</string>
  </property>
  <property name="sizeGripEnabled">
   <bool>true</bool>
  </property>
  <layout class="QGridLayout" name="gridLayout_7">
   <item row="0" column="0">
    <layout class="QGridLayout" name="gridLayout_17">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout_9">
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
          <widget class="QPushButton" name="pushButton_start">
           <property name="styleSheet">
            <string notr="true">background-color:rgb(255, 255, 255);
</string>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="icon">
            <iconset resource="../iconQrc.qrc">
             <normaloff>:/newPrefix/icon/start1.ico</normaloff>:/newPrefix/icon/start1.ico</iconset>
           </property>
           <property name="iconSize">
            <size>
             <width>32</width>
             <height>31</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="QPushButton" name="pushButton_restart">
           <property name="styleSheet">
            <string notr="true">background-color:rgb(255, 255, 255);</string>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="icon">
            <iconset resource="../iconQrc.qrc">
             <normaloff>:/newPrefix/icon/restart1.ico</normaloff>:/newPrefix/icon/restart1.ico</iconset>
           </property>
           <property name="iconSize">
            <size>
             <width>32</width>
             <height>31</height>
            </size>
           </property>
          </widget>
         </item>
         <item row="0" column="2">
          <widget class="QPushButton" name="pushButton_close">
           <property name="styleSheet">
            <string notr="true">background-color:rgb(255, 255, 255);</string>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="icon">
            <iconset resource="../iconQrc.qrc">
             <normaloff>:/newPrefix/icon/close1.ico</normaloff>:/newPrefix/icon/close1.ico</iconset>
           </property>
           <property name="iconSize">
            <size>
             <width>32</width>
             <height>31</height>
            </size>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item row="0" column="1">
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </item>
     <item row="1" column="0">
      <layout class="QGridLayout" name="gridLayout_8">
       <item row="0" column="0">
        <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,2">
         <item>
          <widget class="QGroupBox" name="groupBox_test_modules">
           <property name="title">
            <string>测试项目</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
            <property name="topMargin">
             <number>20</number>
            </property>
            <property name="verticalSpacing">
             <number>6</number>
            </property>
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,3">
              <item row="0" column="0">
               <widget class="QGroupBox" name="groupBox_2">
                <property name="title">
                 <string/>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
                 <item row="0" column="0">
                  <widget class="QLabel" name="label_test_duration">
                   <property name="font">
                    <font>
                     <family>Microsoft YaHei</family>
                     <pointsize>-1</pointsize>
                     <kerning>false</kerning>
                    </font>
                   </property>
                   <property name="text">
                    <string>00:00:00</string>
                   </property>
                   <property name="textFormat">
                    <enum>Qt::PlainText</enum>
                   </property>
                   <property name="alignment">
                    <set>Qt::AlignCenter</set>
                   </property>
                  </widget>
                 </item>
                </layout>
               </widget>
              </item>
              <item row="1" column="0">
               <widget class="QTreeWidget" name="treeWidget">
                <property name="headerHidden">
                 <bool>true</bool>
                </property>
                <column>
                 <property name="text">
                  <string>1</string>
                 </property>
                </column>
                <item>
                 <property name="text">
                  <string>协议控制和转换模块</string>
                 </property>
                 <property name="flags">
                  <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
                 </property>
                </item>
               </widget>
              </item>
             </layout>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="QGroupBox" name="groupBox_test_resource">
           <property name="title">
            <string>测试资源</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
            <property name="topMargin">
             <number>20</number>
            </property>
            <item row="0" column="0">
             <widget class="QTableWidget" name="tableWidget_test_resource">
              <property name="showGrid">
               <bool>false</bool>
              </property>
              <property name="gridStyle">
               <enum>Qt::DotLine</enum>
              </property>
              <attribute name="horizontalHeaderCascadingSectionResizes">
               <bool>true</bool>
              </attribute>
              <attribute name="horizontalHeaderDefaultSectionSize">
               <number>120</number>
              </attribute>
              <attribute name="horizontalHeaderStretchLastSection">
               <bool>true</bool>
              </attribute>
              <attribute name="verticalHeaderVisible">
               <bool>false</bool>
              </attribute>
              <attribute name="verticalHeaderStretchLastSection">
               <bool>false</bool>
              </attribute>
              <row>
               <property name="text">
                <string>1</string>
               </property>
              </row>
              <row>
               <property name="text">
                <string>2</string>
               </property>
              </row>
              <column>
               <property name="text">
                <string/>
               </property>
              </column>
              <column>
               <property name="text">
                <string>名称</string>
               </property>
              </column>
              <column>
               <property name="text">
                <string>类型</string>
               </property>
              </column>
              <column>
               <property name="text">
                <string>编号/型号</string>
               </property>
              </column>
              <column>
               <property name="text">
                <string>数量</string>
               </property>
              </column>
              <item row="0" column="1">
               <property name="text">
                <string>1</string>
               </property>
              </item>
              <item row="0" column="2">
               <property name="text">
                <string>2</string>
               </property>
              </item>
              <item row="0" column="3">
               <property name="text">
                <string>2</string>
               </property>
              </item>
              <item row="0" column="4">
               <property name="text">
                <string>1</string>
               </property>
              </item>
              <item row="1" column="1">
               <property name="text">
                <string>2</string>
               </property>
              </item>
              <item row="1" column="2">
               <property name="text">
                <string>2</string>
               </property>
              </item>
              <item row="1" column="3">
               <property name="text">
                <string>2</string>
               </property>
              </item>
              <item row="1" column="4">
               <property name="text">
                <string>2</string>
               </property>
              </item>
             </widget>
            </item>
           </layout>
          </widget>
         </item>
        </layout>
       </item>
       <item row="1" column="0">
        <widget class="QGroupBox" name="groupBox_test_results">
         <property name="title">
          <string/>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <item row="0" column="0">
           <widget class="QTabWidget" name="tabWidget">
            <property name="tabPosition">
             <enum>QTabWidget::South</enum>
            </property>
            <property name="currentIndex">
             <number>3</number>
            </property>
            <widget class="QWidget" name="tab">
             <attribute name="title">
              <string>调谐/音频/中频模块</string>
             </attribute>
             <layout class="QGridLayout" name="gridLayout_19">
              <item row="0" column="0">
               <widget class="QTableWidget" name="tableWidget_VF_IF">
                <property name="styleSheet">
                 <string notr="true"/>
                </property>
                <property name="showGrid">
                 <bool>false</bool>
                </property>
                <attribute name="horizontalHeaderDefaultSectionSize">
                 <number>120</number>
                </attribute>
                <attribute name="horizontalHeaderStretchLastSection">
                 <bool>true</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
                 <bool>false</bool>
                </attribute>
                <row>
                 <property name="text">
                  <string>1</string>
                 </property>
                </row>
                <column>
                 <property name="text">
                  <string/>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试项</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试条件</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结果</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结论</string>
                 </property>
                </column>
               </widget>
              </item>
             </layout>
            </widget>
            <widget class="QWidget" name="tab_2">
             <attribute name="title">
              <string>频率合成/滤波器/功放模块</string>
             </attribute>
             <layout class="QGridLayout" name="gridLayout_10">
              <item row="0" column="0">
               <widget class="QTableWidget" name="tableWidget_low_power">
                <property name="styleSheet">
                 <string notr="true"/>
                </property>
                <property name="showGrid">
                 <bool>false</bool>
                </property>
                <attribute name="horizontalHeaderDefaultSectionSize">
                 <number>120</number>
                </attribute>
                <attribute name="horizontalHeaderStretchLastSection">
                 <bool>true</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
                 <bool>false</bool>
                </attribute>
                <row>
                 <property name="text">
                  <string>1</string>
                 </property>
                </row>
                <column>
                 <property name="text">
                  <string/>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试项</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试条件</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结果</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结论</string>
                 </property>
                </column>
               </widget>
              </item>
             </layout>
            </widget>
            <widget class="QWidget" name="tab_3">
             <attribute name="title">
              <string>50w滤波器/50w功放模块</string>
             </attribute>
             <layout class="QGridLayout" name="gridLayout_12">
              <item row="0" column="0">
               <widget class="QTableWidget" name="tableWidget_high_power">
                <property name="styleSheet">
                 <string notr="true"/>
                </property>
                <property name="showGrid">
                 <bool>false</bool>
                </property>
                <attribute name="horizontalHeaderDefaultSectionSize">
                 <number>120</number>
                </attribute>
                <attribute name="horizontalHeaderStretchLastSection">
                 <bool>true</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
                 <bool>false</bool>
                </attribute>
                <row>
                 <property name="text">
                  <string>1</string>
                 </property>
                </row>
                <column>
                 <property name="text">
                  <string/>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试项</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试条件</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结果</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结论</string>
                 </property>
                </column>
               </widget>
              </item>
             </layout>
            </widget>
            <widget class="QWidget" name="tab_4">
             <attribute name="title">
              <string>综合业务模块</string>
             </attribute>
             <layout class="QGridLayout" name="gridLayout_11">
              <item row="0" column="0">
               <widget class="QTableWidget" name="tableWidget_IB">
                <property name="styleSheet">
                 <string notr="true"/>
                </property>
                <property name="showGrid">
                 <bool>false</bool>
                </property>
                <attribute name="horizontalHeaderDefaultSectionSize">
                 <number>120</number>
                </attribute>
                <attribute name="horizontalHeaderStretchLastSection">
                 <bool>true</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
                 <bool>false</bool>
                </attribute>
                <row>
                 <property name="text">
                  <string>1</string>
                 </property>
                </row>
                <column>
                 <property name="text">
                  <string/>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试项</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试条件</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结果</string>
                 </property>
                </column>
                <column>
                 <property name="text">
                  <string>测试结论</string>
                 </property>
                </column>
               </widget>
              </item>
             </layout>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../iconQrc.qrc"/>
 </resources>
 <connections/>
</ui>
